--- a/src/sections/Characteristics.css
+++ b/src/sections/Characteristics.css
@@ -54,6 +54,10 @@
     padding: 20px 0; /* Reduce el padding en pantallas más pequeñas */
   }
 
+  .characteristics h2 {
+    font-size: 1.5rem; /* Ajusta el tamaño de la fuente del título */
+  }
+
   .characteristic-section h3 {
     font-size: 1.2rem; /* Ajusta el tamaño de la fuente del título */
     padding: 8px; /* Reduce el padding */
@@ -74,7 +78,7 @@
 
 @media (max-width: 480px) {
   .characteristics h2 {
-    font-size: 1.5rem; /* Reduce el tamaño de la fuente del título principal */
+    font-size: 1.2rem; /* Reduce el tamaño de la fuente del título principal */
   }
 
   .characteristic-section h3 {
