--- a/src/sections/Blog.css
+++ b/src/sections/Blog.css
@@ -42,3 +42,45 @@
 .read-more:hover {
   text-decoration: underline;
 }
+
+@media (max-width: 850px) {
+  .blog {
+    max-width: 90%; /* Establece un ancho máximo del 90% en pantallas menores a 850px */
+  }
+}
+
+@media (max-width: 768px) {
+  .blog h2 {
+    font-size: 1.5rem; /* Ajusta el tamaño de la fuente del título */
+  }
+
+  .blog-post {
+    padding: 15px; /* Reduce el padding en pantallas más pequeñas */
+  }
+
+  .blog-post h3 {
+    font-size: 1.5rem; /* Ajusta el tamaño de la fuente del título */
+  }
+
+  .post-date {
+    font-size: 0.9rem; /* Ajusta el tamaño de la fecha */
+  }
+}
+
+@media (max-width: 480px) {
+  .blog h2 {
+    font-size: 1.2rem; /* Reduce aún más el tamaño de la fuente del título */
+  }
+
+  .blog-post h3 {
+    font-size: 1.2rem; /* Reduce aún más el tamaño de la fuente del título */
+  }
+
+  .post-date {
+    font-size: 0.8rem; /* Ajusta el tamaño de la fecha */
+  }
+
+  .read-more {
+    font-size: 0.9rem; /* Ajusta el tamaño del enlace "Leer más" */
+  }
+}
