Refactor styles by removing App.css and unifying global styles in index.css
Deleted App.css and consolidated all global styles into index.css for better organization and maintainability. Additionally, added cursor: pointer to improve user experience in Home.css.

--- a/src/index.css
+++ b/src/index.css
@@ -20,6 +20,13 @@ body {
   padding: 0 20px;
 }
 
+section {
+  /* min-height: 100vh; */
+  display: flex;
+  flex-direction: column;
+
+}
+
 h2 {
   text-align: center;
   margin-bottom: 40px;
